# AutoPalette

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/: hm-module.nix  package.nix  schemer2.nix
src/autopalette/: __init__.py  cli.py  color.py  config.py  palette.py  quality.py  roles.py
src/autopalette/extract/: __init__.py  base.py  pillow.py  schemer2.py
src/autopalette/render/: __init__.py  html.py  json_.py  nix.py
tests/: test_color.py  test_extract_pillow.py  test_palette.py  test_quality.py  test_render.py
