[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autopalette"
version = "0.2.0"
description = "Generate a base16 colour palette from a wallpaper image."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lucifer" }]
dependencies = ["pillow>=10", "numpy>=1.24", "scikit-learn>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
autopalette = "autopalette.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
